--- a/index.html
+++ b/index.html
@@ -77,5 +77,43 @@
 				</div>
 			</div>
 		</div>
+		<!-- Button of test for the Modal Form -->
+		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ModalForm" data-whatever="Formulaire">Formulaire</button>
+		<!-- Modal Form -->
+		<div class="modal fade" id="ModalForm" tabindex="-1" role="dialog" aria-labelledby="ModalFormLabel">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title" id="ModalFormLabel">Qu'avez-vous vu?</h4>
+					</div>
+					<div class="modal-body">
+						<form>
+							<div class="form-group">
+								<select class="form-control">
+									<option>Orignal</option>
+									<option>Ours</option>
+									<option>Phoque</option>
+									<option>Marmotte</option>
+									<option>Castor</option>
+									<option>Autre</option>
+								</select>
+							</div>
+							<div class="form-group">
+								<label for="inputImage">Photo ou selfie</label>
+								<input type="file" id="inputImage">
+							</div>
+							<div class="form-group">
+								<label for="pseudoInput">Pseudo</label>
+								<input type="text" class="form-control" id="pseudoInput" placeholder="Abraracourcix">
+							</div>
+							<textarea class="form-control" rows="3">Commentaire</textarea>
+							<button type="submit" class="btn btn-default">Ajouter</button>
+							<button type="button" class="close">Annuler</button>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
