Approche JS orienté objet

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 		<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.26.0/mapbox-gl.css' rel='stylesheet' />
 
 		<!-- OURS -->
-		<script src='js/mapbox.js'></script>
-		<script src="js/InitSideNaviV2.js"></script>
+		<script src='js/main.js'></script>
 		<link href='css/style.css' rel='stylesheet' />
 	</head>
 	<body>
