--- a/index.html
+++ b/index.html
@@ -57,28 +57,29 @@
 			<a href="http://mapbox.com/about/maps" id="mapbox-maplogo" target="_blank">Mapbox></a>
 		</div>
 
-		<!-- Small modal -->
+		<!-- Small modal to display wildlife -->
 		<div class="modal fade" id="smallModal" role="dialog">
 			<div class="modal-dialog modal-sm">
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal">&times;</button>
 						<h4 class="modal-title">
-							<span id="modalAnimal"></span> by 
+							<span id="modalAnimal"></span> part 
 							<span id="modalPseudo"></span>
 						</h4>
 					</div>
 					<div class="modal-body">
 						<img id="modalImage" alt="Photo"/><br/>
-						<p>When: <span id="modalDate"></span></p>
-						<p>Details: <span id="modalDetails"></span></p>
+						<p>Quand : <span id="modalDate"></span></p>
+						<p>Détails: <span id="modalDetails"></span></p>
 					</div>
 				</div>
 			</div>
 		</div>
+
 		<!-- Button of test for the Modal Form -->
 		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ModalForm" data-whatever="Formulaire">Formulaire</button>
-		<!-- Modal Form -->
+		<!-- Modal to insert wildlife -->
 		<div class="modal fade" id="ModalForm" tabindex="-1" role="dialog" aria-labelledby="ModalFormLabel">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
@@ -90,12 +91,12 @@
 						<form>
 							<div class="form-group">
 								<select class="form-control">
+									<option>Autre</option>
 									<option>Orignal</option>
 									<option>Ours</option>
 									<option>Phoque</option>
 									<option>Marmotte</option>
 									<option>Castor</option>
-									<option>Autre</option>
 								</select>
 							</div>
 							<div class="form-group">
@@ -103,10 +104,10 @@
 								<input type="file" id="inputImage">
 							</div>
 							<div class="form-group">
-								<label for="pseudoInput">Pseudo</label>
+								<label for="pseudoInput" pl>Pseudo</label>
 								<input type="text" class="form-control" id="pseudoInput" placeholder="Abraracourcix">
 							</div>
-							<textarea class="form-control" rows="3">Commentaire</textarea>
+							<textarea class="form-control" rows="3" placeholder="Commentaire"></textarea>
 							<button type="submit" class="btn btn-default">Ajouter</button>
 							<button type="button" class="close">Annuler</button>
 						</form>
