--- a/index.html
+++ b/index.html
@@ -64,14 +64,21 @@
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal">&times;</button>
 						<h4 class="modal-title">
-							<span id="modalAnimal"></span> part 
-							<span id="modalPseudo"></span>
+							<span id="modalAnimal"></span>
 						</h4>
 					</div>
-					<div class="modal-body">
+					<div class="modal-header">
 						<img id="modalImage" alt="Photo"/><br/>
-						<p>Quand : <span id="modalDate"></span></p>
-						<p>Détails: <span id="modalDetails"></span></p>
+						<h4>Description de l'animal :</h4>
+						<p id="modalDescription"></p>
+					</div>
+					<div class="modal-body">
+						<h4>Vu il y a
+							<span id="modalMinutes"></span>
+							mins par <span id="modalPseudo"></span>
+						</h4>
+						<h4>Infos :</h4>
+						<p id="modalDetails"></p>
 					</div>
 				</div>
 			</div>
