--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 							</div>
 							<textarea class="form-control" rows="3" placeholder="Commentaire"></textarea>
 							<button type="submit" class="btn btn-default">Ajouter</button>
-							<button type="button" class="close">Annuler</button>
+							<button type="button" class="close" data-dismiss="modal">Annuler</button>
 						</form>
 					</div>
 				</div>
