Optimisation chargement scripts

--- a/index.html
+++ b/index.html
@@ -5,19 +5,9 @@
 		<title>WildLifeMapper</title>
 		<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no,width=device-width' />
 
-		<!-- JQuery -->
-		<script src='https://code.jquery.com/jquery-3.1.1.min.js'></script>
-
-		<!-- Boostrap -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-		<!-- MapBox -->
-		<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.26.0/mapbox-gl.js'></script> 
-		<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.26.0/mapbox-gl.css' rel='stylesheet' />
-
-		<!-- OURS -->
-		<script src='js/main.js'></script>
+		<!-- CSS -->
+		<link href='https://api.mapbox.com/mapbox-gl-js/v0.26.0/mapbox-gl.css' rel='stylesheet'/>
+		<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
 		<link href='css/style.css' rel='stylesheet' />
 	</head>
 	<body>
@@ -122,4 +112,11 @@
 			</div>
 		</div>
 	</body>
+
+	<!-- SCRIPTS -->
+	<script src='https://api.mapbox.com/mapbox-gl-js/v0.26.0/mapbox-gl.js' async></script>
+	<script src='https://code.jquery.com/jquery-3.1.1.min.js' integrity='sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8='
+		  crossorigin='anonymous'></script>
+	<script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js' async></script>
+	<script src='js/main.js' async></script>
 </html>
