--- a/index.html
+++ b/index.html
@@ -53,22 +53,26 @@
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal">&times;</button>
-						<h4 class="modal-title">
+						<h4 class="modal-title" id="modalIsAnimal">
 							<span id="modalAnimal"></span>
 						</h4>
 					</div>
-					<div class="modal-header">
-						<img id="modalImage" alt="Photo"/><br/>
-						<h4>Description de l'animal :</h4>
-						<p id="modalDescription"></p>
-					</div>
 					<div class="modal-body">
+						<img id="modalImage" alt="Image non trouvé"/>
+						<div id="modalIsDescription">
+							<h4>Description de l'animal :</h4>
+							<p id="modalDescription"></p>
+						</div>
 						<h4>Vu il y a
-							<span id="modalMinutes"></span>
-							mins par <span id="modalPseudo"></span>
+							<span id="modalMinutes"></span> mins
+							<span id="modalIsPseudo"> par 
+								<span id="modalPseudo"></span>
+							</span>
 						</h4>
-						<h4>Infos :</h4>
-						<p id="modalDetails"></p>
+						<div id="modalIsDetails">
+							<h4>Infos :</h4>
+							<p id="modalDetails"></p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -114,7 +118,7 @@
 	</body>
 
 	<!-- SCRIPTS -->
-	<script src='https://api.mapbox.com/mapbox-gl-js/v0.26.0/mapbox-gl.js' async></script>
+	<script src='https://api.mapbox.com/mapbox-gl-js/v0.26.0/mapbox-gl.js'></script>
 	<script src='https://code.jquery.com/jquery-3.1.1.min.js' integrity='sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8='
 		  crossorigin='anonymous'></script>
 	<script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js' async></script>
