changement mise en page mobile

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 					<span class="tooltiptext">AHAHAh TOOLTIP AHAHAHAH TOOLTIP</span>
 				</li>
 			</ul>
+			<button id="form" type="button" class="btn btn-primary" data-toggle="modal" data-target="#ModalForm" data-whatever="Formulaire">Formulaire</button>
 			<div id="sidebar-btn">
 				<span class="expand"></span>
 				<span class="expand"></span>
@@ -79,7 +80,7 @@
 		</div>
 
 		<!-- Button of test for the Modal Form -->
-		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ModalForm" data-whatever="Formulaire">Formulaire</button>
+		
 		<!-- Modal to insert wildlife -->
 		<div class="modal fade" id="ModalForm" tabindex="-1" role="dialog" aria-labelledby="ModalFormLabel">
 			<div class="modal-dialog" role="document">
