fonction affichage point déplaçable et formulaire

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		<!-- Button of test for the Modal Form -->
 		
 		<!-- Modal to insert wildlife -->
-		<div class="modal fade" id="ModalForm" tabindex="-1" role="dialog" aria-labelledby="ModalFormLabel">
+		<div class="modal fade" id="InsertForm" tabindex="-1" role="dialog" aria-labelledby="ModalFormLabel">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
 					<div class="modal-header">
